# Qorvo_UWB_Linux

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.c
decadriver/: deca_device.c  deca_device_api.h
example/ex_uwb_reading_dev/: ex_uwb_reading_dev.c
example/ex_uwb_reading_dev_id/: CMakeLists.txt  read_device_id.c
example/read_device_id/: read_device_id.c
example/simple_tx/: simple_tx.c
platform/: CMakeLists.txt  spi_interface.c  spi_interface.h  spi_interface1.cc
platform/inc/: spi.h
platform/spi_core/: CMakeLists.txt
platform/spi_core/inc/: spi.h
platform/spi_core/src/: spi.c
src/: spi.c
uwb_driver/: CMakeLists.txt  uwb_device.c  uwb_device_api.h
